Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-67432

Cannot document templated using declaration with qdoc

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.15.1, 6.1.0 RC
    • 5.11.0 Beta 2
    • Build tools: qdoc
    • None
    • 13
    • 4f97a639cc39e8b1a42181a662b1059cd9c1d581 (qt/qttools/dev) b7a6b1f290ae6f9dc9922590f8976f355da4913b (qt/qttools/5.15)
    • Da Vinci sprint 8, Da Vinci sprint 9, Da Vinci sprint 10

    Description

      Consider following snippet:

      template<typename K, typename T>
      struct S {};
      
      template<typename T>
      using Specialized = S<int, T>;
      

      Now qdoc does not warn about undocumented typedef and it does not recognize the templated using declaration regardless of syntax. Attempted:

      /*!
      \class S
      \inmodule MyModule
      \brief Some struct.
      */
      
      /*!
      \typedef template<typename T> Specialized
      Desc...
      */
      
      /*!
      \typedef Specialized
      Desc...
      */
      

      But both syntaxes produce the same error:

      (qdoc) warning: Cannot find 'Specialized' specified with '\typedef' in any header file

      Placing it inside a class does not help here. Without the template the using declarations are picked up by \typedef command fine.

      (it is in the header file with other things that are documented fine)

      Attachments

        For Gerrit Dashboard: QTBUG-67432
        # Subject Branch Project Status CR V

        Activity

          People

            treinio Topi Reiniƶ
            resurr3ction Michael Vlach
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes