tests/auto/qdoc/generatedoutput/tst_generatedoutput.cpp
@@ -332,6 +332,7 @@ void tst_generatedOutput::templateParameters()
 {
     testAndCompare("testdata/configs/testtemplate.qdocconf",
                    "template/testqdoc-test.html "
+                   "template/testqdoc-test-struct.html "
                    "template/foo.html "
                    "template/bar.html "
                    "template/baz.html");
